--- a/programming_physics/BirdsAssemble1/BirdsAssemble/Assembly-CSharp.csproj
+++ b/programming_physics/BirdsAssemble1/BirdsAssemble/Assembly-CSharp.csproj
@@ -55,6 +55,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CyberPunk\Scripts\Done_BGScroller.cs" />
+     <Compile Include="Assets\CyberPunk\Scripts\Perspective2DSortMode.cs" />
      <Compile Include="Assets\Scripts\Bird.cs" />
      <Compile Include="Assets\Scripts\Brick.cs" />
      <Compile Include="Assets\Scripts\CameraFixAspectRatio.cs" />
@@ -67,6 +69,7 @@
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\ParallaxScrolling.cs" />
      <Compile Include="Assets\Scripts\Pig.cs" />
+     <Compile Include="Assets\Scripts\S2Parallax.cs" />
      <Compile Include="Assets\Scripts\SlingShot.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
